Edit build.gradle